2008-08-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #462242

	* gui/gnome-cal.c: (default_client_cal_opened_cb):
	Do not unref NULL pointers.

2008-08-18  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #508732

	* gui/calendar-component.c (impl_createView):
	* gui/memos-component.c (impl_createView):
	* gui/tasks-component.c (impl_createView):
	Add a "select_item" argument for crash recovery, which these
	components do not use.

2008-08-04  Paul Bolle  <pebolle@tiscali.nl>

	* gui/gui/calendar-component.c: (set_info):
	Use "Calendars" as label for component, not "Calendar", for
	consistency.

2008-08-14  Sebastien Bacher  <seb128@ubuntu.com>

	** Fix for bug #547805

	* gui/e-cal-popup.c: (ecalp_standard_menu_factory):
	don't filter applications using g_app_info_should_show()

2008-08-14  Matthew Barnes  <mbarnes@redhat.com>

	* gui/dialogs/comp-editor.c:
	Use e_display_help() for displaying help.

2008-08-17  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/dialogs/event-page.c: (source_changed_cb):
	* gui/dialogs/memo-page.c: (source_changed_cb):
	* gui/e-cal-model.c: (e_cal_model_set_timezone),
	(e_cal_view_done_cb):
	* gui/e-day-view-config.c: Fixed some warnings.

2008-08-15  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #347287
	* gui/e-cal-list-view-config.c: (e_cal_list_view_config_set_view):
	* gui/e-cal-list-view.c: (e_cal_list_view_new):
	* gui/e-cal-list-view.h:
	* gui/e-cal-model.c: (e_cal_model_set_timezone), (add_instance_cb),
	(e_cal_view_objects_added_cb), (e_cal_view_done_cb),
	(update_e_cal_view_for_client), (cal_opened_cb), (add_new_client),
	(e_cal_model_component_class_init),
	(e_cal_model_component_finalize), (e_cal_model_component_init),
	(e_cal_model_component_get_type),
	(e_cal_model_copy_component_data),
	(e_cal_model_free_component_data):
	* gui/e-cal-model.h:
	* gui/e-calendar-view.c: (e_calendar_view_init),
	(e_calendar_view_set_model):
	* gui/e-calendar-view.h: