@@ -186,8 +186,8 @@
                 <option value="International">
                     <_title>International</_title>
                 </option>
-                <option value="Next 7 days">
-                    <_title>Next 7 days</_title>
+                <option value="Next 7 Days">
+                    <_title>Next 7 Days</_title>
                 </option>
                 <option value="Birthday">
                     <_title>Birthday</_title>
